syntax = "proto3";

package pb;
message TestController_getContent{
  int64 param = 1;
}
message TestGetContentResponse{
  int64 value1 = 1;
  int64 value2 = 2;
}